realtek-poe: Add support for PoE control over I2C
This adds PoE control over I2C instead of the serial
console.

The protocol logic is different from the serial logic,
since an I2C slave cannot initiate transfers. Instead,
after each command (I2C write) sent, the master immediately
fetches the response from the MCU via an I2C read via
a single I2C r/w cycle. The I2C controller will if necessary
wait for the slave to be ready to send its reply in the
I2C read transfer.

There are no further libraries necessary to support I2C, as
only iocl() calls are used on an i2c device in /dev/i2c-*
We therefore always build with i2c support.
For this to work, the kernel needs to be built with
CONFIG_I2C_CHARDEV=y
in order for the i2c character devices to be present in
/dev.

I2C instead of UART is selected by simply putting e.g. a
	option i2c_bus	'3'
in the global section of the poe configuration file,
where '3' gives the number of the I2C character device.

Optionally, an i2c_addr can be specified, which
defaults to 0x20 as for the address in the only 2 known
PoE devices with I2C.

Signed-off-by: Birger Koblitz <git@birger-koblitz.de>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,8 +16,9 @@ FIND_LIBRARY(uci NAMES uci)
 FIND_LIBRARY(ubox NAMES ubox)
 FIND_PATH(uci_include_dir NAMES uci.h)
 FIND_PATH(ubus_include_dir NAMES libubus.h)
+FIND_PATH(i2c_include_dir NAMES i2c.h)
 FIND_PATH(ubox_include_dir NAMES libubox/usock.h)
-INCLUDE_DIRECTORIES(${ubox_include_dir} ${ubus_include_dir} ${uci_include_dir})
+INCLUDE_DIRECTORIES(${ubox_include_dir} ${ubus_include_dir} ${uci_include_dir} $(i2c_include_dir))
 
 ADD_EXECUTABLE(realtek-poe ${SOURCES})
 
